Add multi-line curl example

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -338,7 +338,8 @@ can optionally listen on a third port for HTTPS.
 
   Example:
 
-      $ curl -X PUT -d '["127.0.0.1:4160", "127.0.0.2:4160"]' http://127.0.0.1:4151/config/nsqlookupd_tcp_addresses
+      $ curl -X PUT http://127.0.0.1:4151/config/nsqlookupd_tcp_addresses \
+          -d '["127.0.0.1:4160", "127.0.0.2:4160"]'
 
 ### <a name="pprof">Debugging and Profiling</a>
 
