Add docker-compose deployment

--- a/_posts/2013-12-31-docker.md
+++ b/_posts/2013-12-31-docker.md
@@ -79,8 +79,50 @@ This will load the certificates from `/home/docker/certs` into the Docker contai
 ### Persisting NSQ Data
 
 To store `nsqd` data on the host disk, use the `/data` volume as your data directory, which lets you mount
-to a [data-only Docker container](https://docs.docker.com/userguide/dockervolumes/#creating-and-mounting-a-data-volume-container) 
+to a [data-only Docker container](https://docs.docker.com/userguide/dockervolumes/#creating-and-mounting-a-data-volume-container)
 or mount to a host-directory:
 
     docker run nsqio/nsq /nsqd \
         --data-path=/data
+
+### Using docker-compose
+
+To start `nsqd`, `nsqlookupd`, and `nsqadmin` together using `docker-compose` then create a `docker-compose.yml`.
+
+    version: '2'
+    services:
+      nsqlookupd:
+        image: nsqio/nsq
+        command: /nsqlookupd
+        ports:
+          - "4160"
+          - "4161"
+      nsqd:
+        image: nsqio/nsq
+        command: /nsqd --lookupd-tcp-address=nsqlookupd:4160
+        ports:
+          - "4150"
+          - "4151"
+      nsqadmin:
+        image: nsqio/nsq
+        command: /nsqadmin --lookupd-http-address=nsqlookupd:4161
+        ports:
+          - "4171"
+
+To start run the following command from the same directory as the `docker-compose.yml` created previously.
+
+    docker-compose up -d
+
+A private network will be created and three containers will be started using the private network. On the local host each container will have a random port mapped to ports exposed in the `docker-compose.yml`.
+
+To view the running containers status and mapped ports.
+
+    docker-compose ps
+
+To see the logs from the running containers.
+
+    docker-compose logs
+
+Assuming that the `nsqlookupd` had host port 31001 mapped to the container port 4161 a simple ping could be performed using `curl`.
+
+    curl http://127.0.0.1:31001/ping
