update cmd line params

--- a/_posts/2012-10-01-nsqadmin.md
+++ b/_posts/2012-10-01-nsqadmin.md
@@ -14,17 +14,46 @@ administrative tasks.
 
 ### Command Line Options
 
-    -graphite-url="": URL to graphite HTTP address
-    -http-address="0.0.0.0:4171": <addr>:<port> to listen on for HTTP clients
-    -lookupd-http-address=[]: lookupd HTTP address (may be given multiple times)
-    -notification-http-endpoint="": HTTP endpoint (fully qualified) to which POST notifications of admin actions will be sent
-    -nsqd-http-address=[]: nsqd HTTP address (may be given multiple times)
-    -proxy-graphite=false: Proxy HTTP requests to graphite
-    -statsd-interval=1m0s: time interval nsqd is configured to push to statsd (must match nsqd)
-    -statsd-prefix="nsq.%s": prefix used for keys sent to statsd (%s for host replacement, must
-    -template-dir="": path to templates directory
-    -use-statsd-prefixes=true: expect statsd prefixed keys in graphite (ie: 'stats_counts.')
-    -version=false: print version string
+    -allow-config-from-cidr string
+        A CIDR from which to allow HTTP requests to the /config endpoint (default "127.0.0.1/8")
+    -config string
+        path to config file
+    -graphite-url string
+        graphite HTTP address
+    -http-address string
+        <addr>:<port> to listen on for HTTP clients (default "0.0.0.0:4171")
+    -http-client-connect-timeout duration
+        timeout for HTTP connect (default 2s)
+    -http-client-request-timeout duration
+        timeout for HTTP request (default 5s)
+    -http-client-tls-cert string
+        path to certificate file for the HTTP client
+    -http-client-tls-insecure-skip-verify
+        configure the HTTP client to skip verification of TLS certificates
+    -http-client-tls-key string
+        path to key file for the HTTP client
+    -http-client-tls-root-ca-file string
+        path to CA file for the HTTP client
+    -log-prefix string
+        log message prefix (default "[nsqadmin] ")
+    -lookupd-http-address value
+        lookupd HTTP address (may be given multiple times)
+    -notification-http-endpoint string
+        HTTP endpoint (fully qualified) to which POST notifications of admin actions will be sent
+    -nsqd-http-address value
+        nsqd HTTP address (may be given multiple times)
+    -proxy-graphite
+        proxy HTTP requests to graphite
+    -statsd-counter-format string
+        The counter stats key formatting applied by the implementation of statsd. If no formatting is desired, set this to an empty string. (default "stats.counters.%s.count")
+    -statsd-gauge-format string
+        The gauge stats key formatting applied by the implementation of statsd. If no formatting is desired, set this to an empty string. (default "stats.gauges.%s")
+    -statsd-interval duration
+        time interval nsqd is configured to push to statsd (must match nsqd) (default 1m0s)
+    -statsd-prefix string
+        prefix used for keys sent to statsd (%s for host replacement, must match nsqd) (default "nsq.%s")
+    -version
+        print version string
 
 ### statsd / Graphite Integration
 
