--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -15,44 +15,92 @@ can optionally listen on a third port for HTTPS.
 
 ### Command Line Options
 
-    -auth-http-address=: <addr>:<port> to query auth server (may be given multiple times)
-    -broadcast-address="": address that will be registered with lookupd (defaults to the OS hostname)
-    -config="": path to config file
-    -data-path="": path to store disk-backed messages
-    -deflate=true: enable deflate feature negotiation (client compression)
-    -e2e-processing-latency-percentile=: message processing time percentiles (as float (0, 1.0]) to track (can be specified multiple times or comma separated '1.0,0.99,0.95', default none)
-    -e2e-processing-latency-window-time=10m0s: calculate end to end latency quantiles for this duration of time (ie: 60s would only show quantile calculations from the past 60 seconds)
-    -http-address="0.0.0.0:4151": <addr>:<port> to listen on for HTTP clients
-    -https-address="": <addr>:<port> to listen on for HTTPS clients
-    -lookupd-tcp-address=: lookupd TCP address (may be given multiple times)
-    -max-body-size=5123840: maximum size of a single command body
-    -max-bytes-per-file=104857600: number of bytes per diskqueue file before rolling
-    -max-deflate-level=6: max deflate compression level a client can negotiate (> values == > nsqd CPU usage)
-    -max-heartbeat-interval=1m0s: maximum client configurable duration of time between client heartbeats
-    -max-msg-size=1024768: maximum size of a single message in bytes
-    -max-msg-timeout=15m0s: maximum duration before a message will timeout
-    -max-output-buffer-size=65536: maximum client configurable size (in bytes) for a client output buffer
-    -max-output-buffer-timeout=1s: maximum client configurable duration of time between flushing to a client
-    -max-rdy-count=2500: maximum RDY count for a client
-    -max-req-timeout=1h0m0s: maximum requeuing timeout for a message
-    -mem-queue-size=10000: number of messages to keep in memory (per topic/channel)
-    -msg-timeout="60s": duration to wait before auto-requeing a message
-    -snappy=true: enable snappy feature negotiation (client compression)
-    -statsd-address="": UDP <addr>:<port> of a statsd daemon for pushing stats
-    -statsd-interval="60s": duration between pushing to statsd
-    -statsd-mem-stats=true: toggle sending memory and GC stats to statsd
-    -statsd-prefix="nsq.%s": prefix used for keys sent to statsd (%s for host replacement)
-    -sync-every=2500: number of messages per diskqueue fsync
-    -sync-timeout=2s: duration of time per diskqueue fsync
-    -tcp-address="0.0.0.0:4150": <addr>:<port> to listen on for TCP clients
-    -tls-cert="": path to certificate file
-    -tls-client-auth-policy="": client certificate auth policy ('require' or 'require-verify')
-    -tls-key="": path to private key file
-    -tls-required=false: require TLS for client connections
-    -tls-root-ca-file="": path to private certificate authority pem
-    -verbose=false: enable verbose logging
-    -version=false: print version string
-    -worker-id=0: unique identifier (int) for this worker (will default to a hash of hostname)
+    -auth-http-address value
+        <addr>:<port> to query auth server (may be given multiple times)
+    -broadcast-address string
+        address that will be registered with lookupd (defaults to the OS hostname) (default "PROSNAKES.local")
+    -config string
+        path to config file
+    -data-path string
+        path to store disk-backed messages
+    -deflate
+        enable deflate feature negotiation (client compression) (default true)
+    -e2e-processing-latency-percentile value
+        message processing time percentiles (as float (0, 1.0]) to track (can be specified multiple times or comma separated '1.0,0.99,0.95', default none)
+    -e2e-processing-latency-window-time duration
+        calculate end to end latency quantiles for this duration of time (ie: 60s would only show quantile calculations from the past 60 seconds) (default 10m0s)
+    -http-address string
+        <addr>:<port> to listen on for HTTP clients (default "0.0.0.0:4151")
+    -http-client-connect-timeout duration
+        timeout for HTTP connect (default 2s)
+    -http-client-request-timeout duration
+        timeout for HTTP request (default 5s)
+    -https-address string
+        <addr>:<port> to listen on for HTTPS clients (default "0.0.0.0:4152")
+    -log-prefix string
+        log message prefix (default "[nsqd] ")
+    -lookupd-tcp-address value
+        lookupd TCP address (may be given multiple times)
+    -max-body-size int
+        maximum size of a single command body (default 5242880)
+    -max-bytes-per-file int
+        number of bytes per diskqueue file before rolling (default 104857600)
+    -max-deflate-level int
+        max deflate compression level a client can negotiate (> values == > nsqd CPU usage) (default 6)
+    -max-heartbeat-interval duration
+        maximum client configurable duration of time between client heartbeats (default 1m0s)
+    -max-msg-size int
+        maximum size of a single message in bytes (default 1048576)
+    -max-msg-timeout duration
+        maximum duration before a message will timeout (default 15m0s)
+    -max-output-buffer-size int
+        maximum client configurable size (in bytes) for a client output buffer (default 65536)
+    -max-output-buffer-timeout duration
+        maximum client configurable duration of time between flushing to a client (default 1s)
+    -max-rdy-count int
+        maximum RDY count for a client (default 2500)
+    -max-req-timeout duration
+        maximum requeuing timeout for a message (default 1h0m0s)
+    -mem-queue-size int
+        number of messages to keep in memory (per topic/channel) (default 10000)
+    -msg-timeout string
+        duration to wait before auto-requeing a message (default "1m0s")
+    -node-id int
+        unique part for message IDs, (int) in range [0,1024) (default is hash of hostname) (default 616)
+    -snappy
+        enable snappy feature negotiation (client compression) (default true)
+    -statsd-address string
+        UDP <addr>:<port> of a statsd daemon for pushing stats
+    -statsd-interval string
+        duration between pushing to statsd (default "1m0s")
+    -statsd-mem-stats
+        toggle sending memory and GC stats to statsd (default true)
+    -statsd-prefix string
+        prefix used for keys sent to statsd (%s for host replacement) (default "nsq.%s")
+    -sync-every int
+        number of messages per diskqueue fsync (default 2500)
+    -sync-timeout duration
+        duration of time per diskqueue fsync (default 2s)
+    -tcp-address string
+        <addr>:<port> to listen on for TCP clients (default "0.0.0.0:4150")
+    -tls-cert string
+        path to certificate file
+    -tls-client-auth-policy string
+        client certificate auth policy ('require' or 'require-verify')
+    -tls-key string
+        path to key file
+    -tls-min-version value
+        minimum SSL/TLS version acceptable ('ssl3.0', 'tls1.0', 'tls1.1', or 'tls1.2') (default 769)
+    -tls-required
+        require TLS for client connections (true, false, tcp-https)
+    -tls-root-ca-file string
+        path to certificate authority file
+    -verbose
+        enable verbose logging
+    -version
+        print version string
+    -worker-id
+        do NOT use this, use --node-id
 
 ### HTTP API
 
