Adding DPUB to protocol spec and to nsqd

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -137,6 +137,7 @@ can optionally listen on a third port for HTTPS.
   Query Params:
 
       topic - the topic to publish to
+      defer - for how many ms to delay message delivery
 
   Body:
 
@@ -144,7 +145,7 @@ can optionally listen on a third port for HTTPS.
 
   Example:
 
-      $ curl -d "<message>" http://127.0.0.1:4151/pub?topic=name
+      $ curl -d "<message>" http://127.0.0.1:4151/pub?topic=name?defer=1000
 
 * #### `POST` `/mpub`
 
