--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -1,4 +1,4 @@
----
+F---
 title: nsqd
 layout: post
 category: components
@@ -137,7 +137,7 @@ can optionally listen on a third port for HTTPS.
   Query Params:
 
       topic - the topic to publish to
-      defer - optional, for how many ms to delay message delivery
+      defer - the time in ms to delay message delivery (optional)
 
   Body:
 
