Adding DPUB to protocol spec and to nsqd (#21)
* Adding DPUB to protocol spec and to nsqd

* Integrate requested changes

* Second round of comments :)

* Update 2012-12-01-nsqd.md

* Update 2013-03-01-tcp_protocol_spec.md

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -137,6 +137,7 @@ can optionally listen on a third port for HTTPS.
   Query Params:
 
       topic - the topic to publish to
+      defer - the time in ms to delay message delivery (optional)
 
   Body:
 
