add client metrics

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -529,6 +529,8 @@ The `nsqd` instance will push to the following `statsd` paths:
     nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.channel.<channel_name>.message_count
     nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.channel.<channel_name>.requeue_count
     nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.channel.<channel_name>.timeout_count
+    nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.channel.<channel_name>.client.finished_count
+    nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.channel.<channel_name>.client.requeue_count
 
     # if --statsd-mem-stats is enabled
     nsq.<nsqd_host>_<nsqd_port>.mem.heap_objects [gauge]
