--- a/_posts/2012-01-01-design.md
+++ b/_posts/2012-01-01-design.md
@@ -68,7 +68,7 @@ of topics/channels/consumers and inspect depth and other key statistics for each
 it supports a few administrative commands such as removing and emptying a channel (which is a useful
 tool when messages in a channel can be safely thrown away in order to bring depth back to 0).
 
-![nsqadmin](http://media.tumblr.com/tumblr_mbmsd6YMfS1qj3yp2.png)
+![nsqadmin](https://media.tumblr.com/tumblr_mbmsd6YMfS1qj3yp2.png)
 
 ### Straightforward Upgrade Path
 
@@ -98,7 +98,7 @@ Finally, we built utilities to glue old and new components together. These are a
 **all** instances providing the specified topic. There are no middle-men, no message brokers, and no
 SPOFs:
 
-![nsq clients](http://media.tumblr.com/tumblr_mat85kr5td1qj3yp2.png)
+![nsq clients](https://media.tumblr.com/tumblr_mat85kr5td1qj3yp2.png)
 
 This topology eliminates the need to chain single, aggregated, feeds. Instead you consume directly
 from **all** producers. *Technically*, it doesn't matter which client connects to which **NSQ**, as
@@ -145,7 +145,7 @@ that are kept *in memory* for a given queue. If the depth of a queue exceeds thi
 are transparently written to disk. This bounds the memory footprint of a given `nsqd` process to
 `mem-queue-size * #_of_channels_and_topics`:
 
-![message overflow](http://media.tumblr.com/tumblr_mavte17V3t1qj3yp2.png)
+![message overflow](https://media.tumblr.com/tumblr_mavte17V3t1qj3yp2.png)
 
 Also, an astute observer might have identified that this is a convenient way to gain an even higher
 guarantee of delivery by setting this value to something low (like 1 or even 0). The disk-backed
@@ -186,7 +186,7 @@ Client libraries are designed to send a command to update `RDY` count when it re
 configurable `max-in-flight` setting (and properly account for connections to multiple `nsqd`
 instances, dividing appropriately).
 
-![nsq protocol](http://media.tumblr.com/tumblr_mataigNDn61qj3yp2.png)
+![nsq protocol](https://media.tumblr.com/tumblr_mataigNDn61qj3yp2.png)
 
 This is a significant performance knob as some downstream systems are able to more-easily batch
 process messages and benefit greatly from a higher `max-in-flight`.
@@ -213,8 +213,8 @@ interfaces, and iteratively build functionality.
 
 [simplehttp]: https://github.com/bitly/simplehttp
 [simplequeue]: https://github.com/bitly/simplehttp/tree/master/simplequeue
-[idempotence]: http://en.wikipedia.org/wiki/Idempotence
-[golang]: http://golang.org
-[go_at_bitly]: http://word.bitly.com/post/29550171827/go-go-gadget
+[idempotence]: https://en.wikipedia.org/wiki/Idempotence
+[golang]: https://golang.org
+[go_at_bitly]: https://word.bitly.com/post/29550171827/go-go-gadget
 [simplequeue]: https://github.com/bitly/simplehttp/tree/master/simplequeue
 [slides]: https://speakerdeck.com/snakes/nsq-nyc-golang-meetup
