--- a/_posts/2012-10-01-nsqadmin.md
+++ b/_posts/2012-10-01-nsqadmin.md
@@ -58,7 +58,7 @@ administrative tasks.
 ### statsd / Graphite Integration
 
 When using `nsqd --statsd-address=...` you can specify a `nsqadmin
---graphite-url=http://graphite.yourdomain.com` to enable graphite charts in `nsqadmin`. If using a
+--graphite-url=https://graphite.yourdomain.com` to enable graphite charts in `nsqadmin`. If using a
 statsd clone (like [statsdaemon][statsdaemon]) that does not prefix keys, also specify
 `--use-statsd-prefix=false`.
 
