--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -426,7 +426,7 @@ And return a response in the following format:
     {
       "ttl": 3600,
       "identity": "username",
-      "identity_url": "http://....",
+      "identity_url": "https://....",
       "authorizations": [
         {
           "permissions": [
@@ -546,7 +546,7 @@ The `nsqd` instance will push to the following `statsd` paths:
     nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.e2e_processing_latency_<percent> [gauge]
     nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.channel.<channel_name>.e2e_processing_latency_<percent> [gauge]
 
-[go_pprof]: http://golang.org/pkg/net/http/pprof/#pkg-overview
-[bquant]: http://www.cs.rutgers.edu/~muthu/bquant.pdf
+[go_pprof]: https://golang.org/pkg/net/http/pprof/#pkg-overview
+[bquant]: https://www.cs.rutgers.edu/~muthu/bquant.pdf
 [bmizerany]: https://github.com/bmizerany
 [perks]: https://github.com/bmizerany/perks
