--- a/_posts/2014-01-01-patterns.md
+++ b/_posts/2014-01-01-patterns.md
@@ -25,7 +25,7 @@ via HTTP requests, like an API. The naive approach would be to structure
 this synchronously, writing to your metrics system directly in the API request
 handler.
 
-![naive approach](http://media.tumblr.com/tumblr_mf74kh5r4P1qj3yp2.png)
+![naive approach](https://media.tumblr.com/tumblr_mf74kh5r4P1qj3yp2.png)
 
  * What happens when your metrics system goes down?
  * Do your API requests hang and/or fail?
@@ -51,7 +51,7 @@ doc][design_doc] and [slides from our Golang NYC talk][golang_slides],
 specifically [slides 19 through 33][channel_slides] describe topics and
 channels in detail.
 
-![architecture with NSQ](http://media.tumblr.com/tumblr_mf74ktpfpP1qj3yp2.png)
+![architecture with NSQ](https://media.tumblr.com/tumblr_mf74ktpfpP1qj3yp2.png)
 
 Integrating NSQ is straightforward, let's take the simple case:
 
@@ -126,7 +126,7 @@ like the following:
 /usr/local/bin/nsq_to_file --nsqd-tcp-address=127.0.0.1:4150 --topic=api_requests --channel=archive
 ```
 
-![archiving the stream](http://media.tumblr.com/tumblr_mf74l5RqlZ1qj3yp2.png)
+![archiving the stream](https://media.tumblr.com/tumblr_mf74l5RqlZ1qj3yp2.png)
 
 ### Distributed Systems
 
@@ -142,7 +142,7 @@ Let's assume for a second that this event stream is *really* important. You
 want to be able to tolerate host failures and continue to ensure that messages
 are *at least* archived, so you add another host.
 
-![adding a second host](http://media.tumblr.com/tumblr_mf74lmYhZa1qj3yp2.png)
+![adding a second host](https://media.tumblr.com/tumblr_mf74lmYhZa1qj3yp2.png)
 
 Assuming you have some sort of load balancer in front of these two hosts you
 can now tolerate any single host failure.
@@ -151,7 +151,7 @@ Now, let's say the process of persisting, compressing, and transferring these
 logs is affecting performance. How about splitting that responsibility off to
 a tier of hosts that have higher IO capacity?
 
-![separate archive hosts](http://media.tumblr.com/tumblr_mf74m0JHMi1qj3yp2.png)
+![separate archive hosts](https://media.tumblr.com/tumblr_mf74m0JHMi1qj3yp2.png)
 
 This topology and configuration can easily scale to double-digit hosts, but
 you're still managing configuration of these services manually, which does not
@@ -175,7 +175,7 @@ consumer instances at `nsqlookupd` (everyone explicitly knows where
 `nsqlookupd` instances are but consumers don't explicitly know where
 producers are, and vice versa). The topology now looks like this:
 
-![adding nsqlookupd](http://media.tumblr.com/edb403d38fc2bcc727b8655ea70eb3a7/tumblr_inline_mf8sfr2sp41qj3yp2.png)
+![adding nsqlookupd](https://media.tumblr.com/edb403d38fc2bcc727b8655ea70eb3a7/tumblr_inline_mf8sfr2sp41qj3yp2.png)
 
 At first glance this may look *more* complicated. It's deceptive though, as
 the effect this has on a growing infrastructure is hard to communicate
