--- a/_posts/2013-12-31-docker.md
+++ b/_posts/2013-12-31-docker.md
@@ -5,7 +5,7 @@ category: deployment
 permalink: /deployment/docker.html
 ---
 
-This post details how to deploy and run the nsq binaries inside [Docker](http://www.docker.com) containers.
+This post details how to deploy and run the nsq binaries inside [Docker](https://www.docker.com) containers.
 
 There is a single, minimal nsq image that contains all of the NSQ binaries. Each binary can be run
 by specifying the binary as the command when running Docker. The basic format is:
@@ -18,7 +18,7 @@ Note the `/` before the command. For example:
 
 ### Links
 
-* [docker](http://www.docker.com/)
+* [docker](https://www.docker.com/)
 * [`nsq` image](https://registry.hub.docker.com/u/nsqio/nsq/)
 
 ### Run nsqlookupd
