Fix docker hub url

--- a/_posts/2013-12-31-docker.md
+++ b/_posts/2013-12-31-docker.md
@@ -19,7 +19,7 @@ Note the `/` before the command. For example:
 ### Links
 
 * [docker](https://www.docker.com/)
-* [`nsq` image](https://registry.hub.docker.com/u/nsqio/nsq/)
+* [`nsq` image](https://registry.hub.docker.com/r/nsqio/nsq/)
 
 ### Run nsqlookupd
 
