update nsqd, lookupd, admin, utilities command line options accordint to the latest release

--- a/_posts/2012-10-01-nsqadmin.md
+++ b/_posts/2012-10-01-nsqadmin.md
@@ -14,8 +14,14 @@ administrative tasks.
 
 ### Command Line Options
 
+    -acl-http-header string
+        HTTP header to check for authenticated admin users (default "X-Forwarded-User")
+    -admin-user value
+        admin user (may be given multiple times; if specified, only these users will be able to perform privileged actions; acl-http-header is used to determine the authenticated user)
     -allow-config-from-cidr string
         A CIDR from which to allow HTTP requests to the /config endpoint (default "127.0.0.1/8")
+    -base-path string
+        URL base path (default "/")
     -config string
         path to config file
     -graphite-url string
@@ -34,6 +40,8 @@ administrative tasks.
         path to key file for the HTTP client
     -http-client-tls-root-ca-file string
         path to CA file for the HTTP client
+    -log-level value
+        set log verbosity: debug, info, warn, error, or fatal (default INFO)
     -log-prefix string
         log message prefix (default "[nsqadmin] ")
     -lookupd-http-address value
@@ -52,6 +60,8 @@ administrative tasks.
         time interval nsqd is configured to push to statsd (must match nsqd) (default 1m0s)
     -statsd-prefix string
         prefix used for keys sent to statsd (%s for host replacement, must match nsqd) (default "nsq.%s")
+    -verbose
+        [deprecated] has no effect, use --log-level
     -version
         print version string
 
