--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -18,7 +18,7 @@ can optionally listen on a third port for HTTPS.
     -auth-http-address value
         <addr>:<port> to query auth server (may be given multiple times)
     -broadcast-address string
-        address that will be registered with lookupd (defaults to the OS hostname) (default "PROSNAKES.local")
+        address that will be registered with lookupd (defaults to the OS hostname) (default "yourhost.local")
     -config string
         path to config file
     -data-path string
@@ -37,6 +37,8 @@ can optionally listen on a third port for HTTPS.
         timeout for HTTP request (default 5s)
     -https-address string
         <addr>:<port> to listen on for HTTPS clients (default "0.0.0.0:4152")
+    -log-level value
+        set log verbosity: debug, info, warn, error, or fatal (default INFO)
     -log-prefix string
         log message prefix (default "[nsqd] ")
     -lookupd-tcp-address value
@@ -45,6 +47,8 @@ can optionally listen on a third port for HTTPS.
         maximum size of a single command body (default 5242880)
     -max-bytes-per-file int
         number of bytes per diskqueue file before rolling (default 104857600)
+    -max-channel-consumers int
+        maximum channel consumer connection count per nsqd instance (default 0, i.e., unlimited)
     -max-deflate-level int
         max deflate compression level a client can negotiate (> values == > nsqd CPU usage) (default 6)
     -max-heartbeat-interval duration
@@ -56,27 +60,33 @@ can optionally listen on a third port for HTTPS.
     -max-output-buffer-size int
         maximum client configurable size (in bytes) for a client output buffer (default 65536)
     -max-output-buffer-timeout duration
-        maximum client configurable duration of time between flushing to a client (default 1s)
+        maximum client configurable duration of time between flushing to a client (default 30s)
     -max-rdy-count int
         maximum RDY count for a client (default 2500)
     -max-req-timeout duration
         maximum requeuing timeout for a message (default 1h0m0s)
     -mem-queue-size int
         number of messages to keep in memory (per topic/channel) (default 10000)
-    -msg-timeout string
-        duration to wait before auto-requeing a message (default "1m0s")
+    -min-output-buffer-timeout duration
+        minimum client configurable duration of time between flushing to a client (default 25ms)
+    -msg-timeout duration
+        default duration to wait before auto-requeing a message (default 1m0s)
     -node-id int
-        unique part for message IDs, (int) in range [0,1024) (default is hash of hostname) (default 616)
+        unique part for message IDs, (int) in range [0,1024) (default is hash of hostname) (default 248)
+    -output-buffer-timeout duration
+        default duration of time between flushing data to clients (default 250ms)
     -snappy
         enable snappy feature negotiation (client compression) (default true)
     -statsd-address string
         UDP <addr>:<port> of a statsd daemon for pushing stats
-    -statsd-interval string
-        duration between pushing to statsd (default "1m0s")
+    -statsd-interval duration
+        duration between pushing to statsd (default 1m0s)
     -statsd-mem-stats
         toggle sending memory and GC stats to statsd (default true)
     -statsd-prefix string
         prefix used for keys sent to statsd (%s for host replacement) (default "nsq.%s")
+    -statsd-udp-packet-size int
+        the size in bytes of statsd UDP packets (default 508)
     -sync-every int
         number of messages per diskqueue fsync (default 2500)
     -sync-timeout duration
@@ -96,11 +106,11 @@ can optionally listen on a third port for HTTPS.
     -tls-root-ca-file string
         path to certificate authority file
     -verbose
-        enable verbose logging
+        [deprecated] has no effect, use --log-level
     -version
         print version string
     -worker-id
-        do NOT use this, use --node-id
+        [deprecated] use --node-id
 
 ### HTTP API
 
