add documentation about broadcast tcp and http ports (#1)

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -19,6 +19,10 @@ can optionally listen on a third port for HTTPS.
         <addr>:<port> to query auth server (may be given multiple times)
     -broadcast-address string
         address that will be registered with lookupd (defaults to the OS hostname) (default "yourhost.local")
+    -broadcast-http-port int
+        HTTP port that will be registered with lookupd (defaults to the HTTP port that this nsqd is listening to)
+    -broadcast-tcp-port int
+        TCP port that will be registered with lookupd (defaults to the TCP port that this nsqd is listening to)
     -config string
         path to config file
     -data-path string
