nsqd: add include_clients/include_mem params for /stats API

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -320,6 +320,8 @@ can optionally listen on a third port for HTTPS.
       format - (optional) `text` or `json` (default = `text`)
       topic - (optional) filter to topic
       channel - (optional) filter to channel
+      include_clients - (optional) include clients stats (default = `true`)
+      include_mem - (optional) include memory stats (default = `true`)
 
   Example:
 
