Add documentation for Topology Aware Consumption

--- a/_posts/2012-01-01-design.md
+++ b/_posts/2012-01-01-design.md
@@ -32,7 +32,7 @@ causing a backlog for other channels (the same applies at the topic level).
 
 A channel can, and generally does, have multiple clients connected. Assuming all connected clients
 are in a state where they are ready to receive messages, each message will be delivered to a random
-client.  For example:
+client (when topology aware consumption is enabled, messages will be delivered at random but with priority based on closest geographical client(s), see [Topology Aware Consumption](#topology-aware-consumption)).  For example:
 
 ![nsqd clients](https://f.cloud.github.com/assets/187441/1700696/f1434dc8-6029-11e3-8a66-18ca4ea10aca.gif)
 
@@ -194,6 +194,16 @@ Notably, because it is both buffered *and* push based with the ability to satisf
 independent copies of streams (channels), we've produced a daemon that behaves like `simplequeue`
 and `pubsub` *combined* . This is powerful in terms of simplifying the topology of our systems where
 we would have traditionally maintained the older toolchain discussed above.
+
+### Topology Aware Consumption
+
+nsqd provides a configuration option `--enable-experiments` that can be used to enable the `topology-aware-consumption` functionality. If this experiment is turned on and configurations are also provided for `--topology-region` and `--topology-zone`, the nsqd will push messages to consumers based on a topology-aware behavior pattern.
+
+Consumers can provide their own topology region and zone via options set in their IDENTIFY message to the nsqd host. If this information is not provided, the consumer will be considered to be outside of both the zone and region of the nsqd.
+
+When configured, nsqd will prioritize the pushing of messages to consumers based on those that are geographically closest to them. It will prioritize first pushing messages to consumers within the same region and zone if possible, then pushing messages to consumers within the same region, and lastly will fall back to pushing to any consumer possible at random (regular behavior).
+
+This behiavor pattern allows for running nsqd in a multiregion application architecture, and to minimize network egress costs for nsqd interacting with consumers in different geolocations.
 
 ### Go
 
