--- a/_posts/2012-10-01-nsqadmin.md
+++ b/_posts/2012-10-01-nsqadmin.md
@@ -139,15 +139,18 @@ The following metrics are exposed through `nsqadmin` on Topic, Channel and Clien
 * `Messages`: Total count of new messages recieved since node startup.
 * `Rate`: The per-second rate of new messages over the previous two statsd intervals (available only when graphite integration is enabled).
 * `Connections`: Current number of connected clients.
+* `Delivery`: Messages delivered to consumers in each topology category (zoneLocal, regionLocal, global) over the lifetime of the host by percentage (available only when topology-aware-consumption experiment is enabled in nsqd and messages > 0)
 
 #### Client Connections:
 
 * `Client Host`: Client ID (hostname) and on-hover the connection remote-address.
 * `Protocol`: NSQ protocol version and client user-agent.
-* `Attributes`: TLS and AUTH connection state.
+* `Attributes`: TLS and AUTH connection state, topology category with respect to the nsqd host (zoneLocal, regionLocal, global).
 * `NSQd Host`: Address of the nsqd node this client is connected to.
 * `In-flight`: Current count of messages awaiting response that have been delivered to this client.
 * `Ready Count`: Max number of messages that can be in-flight on this connection. This is controlled by a client's `max_in_flight` setting.
 * `Finished`: Total count of messages that this client has finished (`FIN`).
 * `Requeued`: Total count of messages that this client has requeued (`REQ`).
 * `Messages`: Total count of messages delivered to this client.
+
+If the topology aware consumption experiment is enabled for the nsqd host, client connections in the same zone as the nsqd host will be displayed in green. Client connections in the same region but a different zone as the nsqd host will be displayed in yellow.
