--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -33,6 +33,8 @@ can optionally listen on a third port for HTTPS.
         message processing time percentiles (as float (0, 1.0]) to track (can be specified multiple times or comma separated '1.0,0.99,0.95', default none)
     -e2e-processing-latency-window-time duration
         calculate end to end latency quantiles for this duration of time (ie: 60s would only show quantile calculations from the past 60 seconds) (default 10m0s)
+    -enable-experiment
+        name of an experimental feature to enable (option: topology-aware-consumption)
     -http-address string
         <addr>:<port> to listen on for HTTP clients (default "0.0.0.0:4151")
     -http-client-connect-timeout duration
@@ -109,6 +111,10 @@ can optionally listen on a third port for HTTPS.
         require TLS for client connections (true, false, tcp-https)
     -tls-root-ca-file string
         path to certificate authority file
+    -topology-region
+        region in which nsqd is running, used only if topology-aware-consumption experiment is enabled
+    -topology-zone
+        zone in which nsqd is running, used only if topology-aware-consumption experiment is enabled
     -verbose
         [deprecated] has no effect, use --log-level
     -version
